# Autonomous-maze-navigation-ros2

./: README.md  README_robot_ros2.md
tp_ros2_ws/: mapa_laberinto.pgm  mapa_laberinto.yaml  mis_params.yaml
tp_ros2_ws/install/: local_setup.sh  setup.sh
tp_ros2_ws/install/control_lab/lib/control_lab/: seguidor_paredes
tp_ros2_ws/install/control_lab/share/control_lab/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
tp_ros2_ws/install/ros_gz_example_application/share/ros_gz_example_application/: package.sh
tp_ros2_ws/install/ros_gz_example_bringup/share/ros_gz_example_bringup/: package.sh
tp_ros2_ws/install/ros_gz_example_description/share/ros_gz_example_description/: package.sh
tp_ros2_ws/install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: package.sh
tp_ros2_ws/src/control_lab/: package.xml  setup.cfg  setup.py
tp_ros2_ws/src/control_lab/control_lab/: seguidor_paredes.py
tp_ros2_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/: diff_drive.rviz  ros_gz_example_bridge.yaml
tp_ros2_ws/src/ros_gz_project_template/ros_gz_example_bringup/launch/: diff_drive.launch.py
tp_ros2_ws/src/ros_gz_project_template/ros_gz_example_description/models/diff_drive/: model.sdf
tp_ros2_ws/src/ros_gz_project_template/ros_gz_example_description/urdf/: diff_drive.urdf.xacro
tp_ros2_ws/src/ros_gz_project_template/ros_gz_example_gazebo/worlds/: diff_drive.sdf
